tests/test_default/bad/empty.catala_en
## Article

```catala
declaration scope A:
  context x content integer
  context y content boolean

scope A:
  definition x equals 1
```

```catala-test {id="A.Interpret"}
catala Interpret -s A
```
